<resources>
    <!--<string name="server_client_id" translatable="false">34917283366-vp76jlfim4aqh4nl9ork3irb4mf4cp34.apps.googleusercontent.com</string>-->
    <string name="server_client_id" translatable="false">449891326531-jv9ulof4hfsuth41buj5buiv5cmf17re.apps.googleusercontent.com</string>
    <string name="app_name">Meraki</string>

    <string name="title_more">More</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello!</string>
    <string name="description">I am <font fgcolor='#D63447'>Meraki.</font>\nI am here to help you learn</string>
    <string name="powered_by">Powered by Nav-Gurukul</string>
    <string name="get_started">Let\'s get started!</string>
    <string name="already_account">Already have an account? <u>Login Now</u></string>
    <string name="login_with_email">Login with Email</string>
    <string name="new_to_meraki">New to Meraki? <u>SignUp here</u></string>
    <string name="unable_to_sign">Unable to Sign in ! Please try again</string>
    <string name="where_you_left">Continue where you left off…</string>
    <string name="upcoming_class">Upcoming Classes</string>
    <string name="view_all">View All</string>
    <string name="other_class">Other Courses</string>
    <string name="try_other_courses">Try any new courses for first 2 weeks</string>
    <string name="discover_class">Discover all upcoming classes</string>
    <string name="stay_updated">Stay updated and don\'t miss out</string>
    <string name="title_home">Home</string>
    <string name="meraki">Meraki</string>
    <string name="search_classes">Search for Classes</string>
    <string name="search_playground">Search projects or lab…</string>
    <string name="no_class_scheduled">No Class Scheduled</string>
    <string name="about">About</string>
    <string name="class_detail">Class Detail</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="enroll_to_class">Enroll To Class</string>
    <string name="unable_to_enroll">Unable to enroll you currently. You might be already enrolled.</string>
    <string name="enrolled">You have been enrolled to class successfully</string>
    <string name="log_out_class">You have been dropped out of batch successfully</string>
    <string name="unable_to_drop">Unable to drop out of batch</string>
    <string name="drop_out">I want to drop out</string>
    <string name="join_class">Join the class</string>
    <string name="join_class_in">Join the class (Starts in %s)</string>
    <string name="unable_to_process_request">Unable to process your request, please try again</string>

    <string name="default_notification_channel_id" translatable="false">meraki_fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Meraki</string>
    <string name="my_details">My Details</string>
    <string name="name">Name</string>
    <string name="email">Email Id</string>
    <string name="save">Save</string>
    <string name="link_google_account">Link Google Account</string>
    <string name="unable_to_update">Unable to update your profile. Please try again</string>
    <string name="unable_to_log_out">Unable to Log out your profile. Please try again</string>
    <string name="profile_updated_successfully">Your profile is updated successfully</string>
    <string name="account_linked_successfully">Account is linked successfully</string>
    <string name="want_log_out">Are you sure you want to log out from application ?</string>
    <string name="okay">Yes</string>
    <string name="cancel">No</string>
    <string name="please_connect">Please connect your account to update</string>
    <string name="update_profile">Update Profile</string>
    <string name="email_already_used">This email is already linked with another account</string>
    <string name="app_version">App Version</string>
    <string name="connect_with_email">Connect with Email</string>
    <string name="skip_login">Don\'t want to login? <u>Skip Login</u></string>
    <string name="create_new_account">Create New Account</string>
    <string name="want_login">Your existing data will be lost and you would be signed in using your email account</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="enroll_date_and_time">Mentor - %1$s\nDate - %2$s\nTime - %3$s</string>
    <string name="unavailable">Unavailable</string>
    <string name="files_saved">Files Saved</string>
    <string name="server_url_label">Server Url</string>
    <string name="delete">Delete</string>
    <string name="copy_to_playground">Copy to Playground</string>
    <string name="file_deleted">File is deleted</string>
    <string name="collapse">Collapse</string>
    <string name="title_typing">Typing</string>
    <string name="enrolled_label">Enrolled</string>
    <string name="only_enrolled">Only Enrolled</string>
    <string name="class_not_started_toast">This class has not started yet, join back in %s</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>


    <string name="opportunities">Opportunities</string>
    <string name="partnerName">Partner Name</string>
    <string name="partnerInfo">Your learning is sponsored by:</string>
    <string name="partnerDesc">Partner Desc</string>
    <string name="partnerWebsite">Website</string>
    <string name="title">Your learning is supported by:</string>
    <string name="opportunities_desc">Curated list of admission tests, grants, advanced courses and mentorship to skyrocket your career</string>
    <string name="explore_opportunities">Explore Opportunities</string>
    <string name="edit">Edit</string>

    <string name="select_language_english">Please select the language you are comfortable to study in</string>
    <string name="select_language_hindi">कृपया अपनी पढ़ाई के लिए पसंदीदा भाषा को चुने </string>
    <string name="english"><b>ABC</b>\n\nEnglish</string>
    <string name="hindi"><b>कखग</b>\n\nहिन्दी</string>
    <string name="skip_login_english">Skip Login</string>
    <string name="skip_login_hindi">लॉगिन छोड़ें</string>
    <string name="skip_english">Skip</string>
    <string name="skip_hindi">छोड़े </string>
    <string name="next_english">Next</string>
    <string name="next_hindi">अगला</string>
    <string name="continue_with_google_hindi">गूगल के साथ जारी रखें</string>
    <string name="continue_with_google_english">Continue with Google</string>


    <string name="learn_python_header_english">Learn Python</string>
    <string name="learn_python_desc_english">Step into the world of tech with guidance from Python professionals</string>
    <string name="title_learn">Learn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_title">Profile</string>
    <string name="enrolled_batches">Enrolled Batches</string>
    <string name="confirmation">Confirm dropping out of the batch</string>
    <string name="confirm_txt">If you have missed some classes, you can take revision classes without dropping off</string>
    <string name="stay_enrolled">Stay Enrolled</string>
    <string name="title_webIDE">HTML/CSS/JS</string>
    <string name="title_web">HTML/CSS/JS</string>

    <string name="refactor">Refactor</string>
    <string name="comment">Comment</string>

    <string name="replace_from">Replace From</string>
    <string name="replace_to">Replace To</string>

    <string name="name_error">Please enter a name</string>
    <string name="author_error">Please enter an author</string>
    <string name="desc_error">Please enter a description</string>
    <string name="keywords_error">Please enter some keywords</string>

    <string name="remote_error">Please enter a remote</string>
    <string name="change_undone">This change cannot be undone.</string>

    <string name="project_success">Your project has been successfully created!</string>
    <string name="project_fail">It seems something went wrong while creating the project.</string>

    <string name="replace">Replace</string>
    <string name="empty_field_no_no">This field cannot be empty</string>

    <string name="action_settings">Settings</string>
    <string name="about_name">Name</string>
    <string name="about_author">Author</string>
    <string name="about_desc">Description</string>
    <string name="about_keywords">Keywords</string>
    <string name="create_keywords">Keywords (separated with commas)</string>
    <string name="create_favicon">Favicon</string>
    <string name="favicon_default">Default</string>
    <string name="favicon_choose">Choose</string>
    <string name="dark_theme">Night Mode</string>
    <string name="dark_theme_desc">Put a little less stress on your eyes.</string>
    <string name="about_project">About</string>
    <string name="enter_project_name">Enter Project Name</string>
</resources>