<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/info_dialog_bg"
    android:padding="@dimen/spacing_5x"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvText"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textStyle="bold"
        android:text="@string/confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvTxt2"
        style="?textAppearanceBody2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:layout_marginTop="@dimen/spacing_4x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvText"
        android:text="@string/confirm_txt"/>

    <TextView
        android:id="@+id/btnStay"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stay_enrolled"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/spacing_4x"
        android:layout_marginTop="@dimen/spacing_8x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTxt2"/>
    <TextView
        android:id="@+id/btnDroupOut"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Drop Out"
        android:textStyle="bold"
        android:textColor="@color/colorRed"
        android:layout_marginEnd="@dimen/spacing_8x"
        app:layout_constraintTop_toTopOf="@+id/btnStay"
        app:layout_constraintEnd_toStartOf="@+id/btnStay"
        app:layout_constraintTop_toBottomOf="@+id/tvTxt2"/>

</androidx.constraintlayout.widget.ConstraintLayout>