<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/idHeader"
            layout="@layout/component_header_profile"/>


        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/dimen_100_dp"
            android:layout_height="@dimen/dimen_100_dp"
            android:layout_below="@id/idHeader"
            android:layout_marginStart="@dimen/spacing_2x"
            android:layout_marginBottom="@dimen/spacing_2x"
            android:background="@drawable/avatar_background_border"
            android:padding="@dimen/spacing_1x"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvName"
            style="?textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idHeader"
            android:layout_marginStart="@dimen/spacing_2x"
            android:layout_marginTop="@dimen/spacing_2x"
            android:layout_toEndOf="@id/ivProfile"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Neha Singh" />

        <TextView
            android:id="@+id/tvEmail"
            style="?textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:layout_marginStart="@dimen/spacing_2x"
            android:layout_toEndOf="@id/ivProfile"
            tools:text="nehasingh@xyz.com" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ivEdit"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEmail"
            android:layout_toEndOf="@+id/ivProfile"
            android:layout_marginStart="@dimen/spacing_2x"
            android:minWidth="@dimen/spacing_2x"
            android:minHeight="@dimen/spacing_2x"
            android:text="@string/edit"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/llProfileEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivProfile"
            android:layout_marginStart="@dimen/spacing_3x"
            android:layout_marginTop="@dimen/spacing_3x"
            android:layout_marginEnd="@dimen/spacing_3x"
            android:layout_marginBottom="@dimen/spacing_3x"
            android:orientation="vertical"
            android:visibility="gone"
            tools:layout_editor_absoluteX="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10_dp"
                android:hint="@string/name"
                android:padding="@dimen/dimen_10_dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10_dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/email"
                android:inputType="none"
                android:padding="@dimen/dimen_10_dp" />

        </LinearLayout>


        <TextView
            android:id="@+id/opportunity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llProfileEdit"
            android:layout_marginStart="@dimen/spacing_3x"
            android:layout_marginTop="@dimen/spacing_2x"
            android:fontFamily="@font/n_extra_bold"
            android:text="@string/opportunities"
            android:textColor="@color/colorGrey_100"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/opportunity"
            android:layout_marginStart="@dimen/spacing_3x"
            android:layout_marginTop="@dimen/spacing_3x"
            android:layout_marginEnd="@dimen/spacing_3x"
            android:layout_marginBottom="@dimen/spacing_3x"
            android:layout_toStartOf="@+id/image"
            android:fontFamily="@font/nunito"
            android:text="@string/opportunities_desc"
            android:textColor="?attr/textColorAlertDialogListItem" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/opportunity"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/spacing_2x"
            android:layout_marginEnd="@dimen/spacing_2x"
            android:layout_marginBottom="@dimen/spacing_2x"
            android:src="@drawable/profile_presents" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/explore_opportunity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_marginStart="@dimen/spacing_3x"
            android:layout_marginTop="@dimen/spacing_3x"
            android:layout_marginEnd="@dimen/spacing_3x"
            android:layout_marginBottom="@dimen/spacing_3x"
            android:fontFamily="@font/nunito"
            android:minHeight="@dimen/minimum_button_height"
            android:text="@string/explore_opportunities"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:cornerRadius="@dimen/spacing_3x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/tvSavedFile"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/explore_opportunity"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/spacing_3x"
            android:layout_marginTop="@dimen/spacing_1x"
            android:text="@string/files_saved"
            android:textAllCaps="false"
            tools:text="Files Saved" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tvViewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_below="@id/explore_opportunity"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/spacing_1x"
            android:layout_marginEnd="@dimen/spacing_3x"
            android:textAllCaps="false"
            android:text="@string/view_all" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/updateProfile"
            android:layout_below="@id/tvSavedFile"
            android:layout_marginTop="@dimen/spacing_2x"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/item_saved_file" />


        <ProgressBar
            android:id="@+id/progress_bar_button"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="@dimen/dimen_progress_bar"
            android:layout_height="@dimen/dimen_progress_bar"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:elevation="2dp"/>

        <LinearLayout
            android:id="@+id/rlServerUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tvPrivacyPolicy"
            android:layout_marginBottom="@dimen/spacing_2x"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvServerUrlLabel"
                style="?textAppearanceEmphasized1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_3x"
                android:layout_marginTop="@dimen/spacing_2x"
                android:text="@string/server_url_label"
                android:textColor="?textPrimary" />

            <TextView
                android:id="@+id/tvServerUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_3x"
                android:layout_marginTop="@dimen/spacing_1x"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?textSecondary" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/tvPrivacyPolicy"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/n_extra_bold"
            android:text="@string/privacy_policy"
            android:textColor="?textPrimary"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?colorPrimary"
            android:text="@string/update_profile"
            android:visibility="visible" />
    </RelativeLayout>
</layout>